# emoji-kitchen-cli

./: .gitignore  Cargo.toml  README.md
src/: animations.rs  discord.rs  emoji.rs  main.rs  pairs.txt  upload.rs  utils.rs  write.rs
