[package]
name = "emoji-kitchen-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
reqwest = "0.11.13"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
